Updated swagger API documentation, filter and controller for technical systems
