# app/Http/Controllers/Swagger/TechnicalSystemController.php
@@ -10,7 +10,38 @@ use App\Http\Controllers\Controller;
  *     summary="Получить список всех технических систем",
  *     tags={"Технические системы"},
  *     security={{ "bearerAuth": {} }},
- *     description="Для супер-администратора возвращает список иерархий всех технических систем, созданных в системе. Для администратора возвращает список иерархий только тех технических систем, которые доступны в рамках проекта для той организации к которой принадлежит администратор.",
+ *     description="Для супер-администратора возвращает список иерархий всех технических систем, созданных в системе. Для администратора возвращает список иерархий только тех технических систем, которые доступны в рамках проекта для той организации к которой принадлежит администратор. Список может быть отфильтрован по различным параметрам.",
+ *
+ *     @OA\Parameter(
+ *         description="Код технической системы или объекта",
+ *         in="query",
+ *         name="code",
+ *         required=false
+ *     ),
+ *     @OA\Parameter(
+ *         description="Название или часть названия технической системы или объекта",
+ *         in="query",
+ *         name="name",
+ *         required=false
+ *     ),
+ *     @OA\Parameter(
+ *         description="id родительской технической системы",
+ *         in="query",
+ *         name="parent_technical_system_id",
+ *         required=false
+ *     ),
+ *     @OA\Parameter(
+ *         description="Размер страницы пагинации",
+ *         in="query",
+ *         name="pageSize",
+ *         required=false
+ *     ),
+ *     @OA\Parameter(
+ *         description="Номер страницы пагинации",
+ *         in="query",
+ *         name="page",
+ *         required=false
+ *     ),
  *
  *     @OA\Response(
  *         response=200,
